// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalStyles checks screenshot of Mobilis´ default theme css resets 1`] = `
<head>
  <style
    data-styled="active"
    data-styled-version="5.2.1"
  >
    html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video,button,input{border:0;font:inherit;margin:0;padding:0;vertical-align:baseline;}
    article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block;}
    ol,ul{list-style:none;}
    blockquote,q{quotes:none;}
    blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}
    table{border-collapse:collapse;border-spacing:0;}
    *{box-sizing:border-box;}
    html,body{height:100%;overscroll-behavior:none;}
    body{-webkit-font-smoothing:antialiased;}
    h1{margin-top:0;}
    em{font-style:italic;}
    a{-webkit-text-decoration:none;text-decoration:none;}
    svg{fill:currentColor;}
    #root{height:100%;}
    html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video,button,input{border:0;font:inherit;margin:0;padding:0;vertical-align:baseline;}
    article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block;}
    ol,ul{list-style:none;}
    blockquote,q{quotes:none;}
    blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}
    table{border-collapse:collapse;border-spacing:0;}
    *{box-sizing:border-box;line-height:1.5;}
    html,body{background-color:hsla(0,0%,100%,1);color:hsla(0,0%,10%,1);height:100%;overscroll-behavior:none;}
    html{font-family:Nunito Sans;font-size:62.5%;}
    body{-webkit-font-smoothing:antialiased;font-style:normal;}
    h1{font-size:3rem;margin-top:0;}
    h2{font-size:2.4rem;}
    h3{font-size:2rem;}
    h4{font-size:1.8rem;}
    em{font-style:italic;}
    strong{font-weight:700;}
    p{font-size:1.6rem;}
    a{color:hsla(230,95%,37%,1);-webkit-text-decoration:none;text-decoration:none;}
    svg{fill:currentColor;}
    #root{height:100%;}
  </style>
</head>
`;

exports[`GlobalStyles checks screenshot of main css resets without theme 1`] = `
<head>
  <style
    data-styled="active"
    data-styled-version="5.2.1"
  >
    html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video,button,input{border:0;font:inherit;margin:0;padding:0;vertical-align:baseline;}
    article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block;}
    ol,ul{list-style:none;}
    blockquote,q{quotes:none;}
    blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}
    table{border-collapse:collapse;border-spacing:0;}
    *{box-sizing:border-box;}
    html,body{height:100%;overscroll-behavior:none;}
    body{-webkit-font-smoothing:antialiased;}
    h1{margin-top:0;}
    em{font-style:italic;}
    a{-webkit-text-decoration:none;text-decoration:none;}
    svg{fill:currentColor;}
    #root{height:100%;}
  </style>
</head>
`;
